@@ -69,15 +69,29 @@ public class TestJmxIntegration extends AbstractSolrTestCase {
     assertTrue("No MBeans found in server", mbeanServer.getMBeanCount() > 0);
 
     Set<ObjectInstance> objects = mbeanServer.queryMBeans(null, null);
-    assertFalse("No SolrInfoMBean objects found in mbean server", objects
+    assertFalse("No objects found in mbean server", objects
             .isEmpty());
+    int numDynamicMbeans = 0;
     for (ObjectInstance o : objects) {
+      assertNotNull("Null name on: " + o.toString(), o.getObjectName());
       MBeanInfo mbeanInfo = mbeanServer.getMBeanInfo(o.getObjectName());
       if (mbeanInfo.getClassName().endsWith(SolrDynamicMBean.class.getName())) {
-        assertTrue("No Attributes found for mbean: " + mbeanInfo, mbeanInfo
-                .getAttributes().length > 0);
+        numDynamicMbeans++;
+        MBeanAttributeInfo[] attrs = mbeanInfo.getAttributes();
+        assertTrue("No Attributes found for mbean: " + mbeanInfo, 
+                   0 < attrs.length);
+        for (MBeanAttributeInfo attr : attrs) {
+          // ensure every advertised attribute is gettable
+          try {
+            Object trash = mbeanServer.getAttribute(o.getObjectName(), attr.getName());
+          } catch (javax.management.AttributeNotFoundException e) {
+            throw new RuntimeException("Unable to featch attribute for " + o.getObjectName()
+                                       + ": " + attr.getName(), e);
+          }
+        }
       }
     }
+    assertTrue("No SolrDynamicMBeans found", 0 < numDynamicMbeans);
   }
 
   @Test
