@@ -113,6 +113,9 @@ Bug Fixes
 
 * SOLR-4867: Admin UI - setting loglevel on root throws RangeError (steffkes)
 
+* SOLR-4863: Removed non-existent attribute sourceId from dynamic JMX stats
+  to fix AttributeNotFoundException (suganuma, hossman via shalin)
+
 Other Changes
 ----------------------
 
